fixed .gitignore added dependecies for IT testing